test.txt
OpenLink Virtuoso Interactive SQL (Virtuoso)
Version 07.20.3229 as of Nov 26 2019
Type HELP; for help and EXIT; to exit.
Connected to OpenLink Virtuoso
Driver: 07.20.3229 OpenLink Virtuoso ODBC Driver
REPORT
VARCHAR
_______________________________________________________________________________

OpenLink Virtuoso  Server
Version 07.20.3229-pthreads for Linux as of Nov 26 2019 
Started on: 2019-11-26 10:19 GMT+0
 
Database Status:
  File size 83886080, 10240 pages, 8211 free.
  20000 buffers, 689 used, 0 dirty 0 wired down, repl age 0 0 w. io 0 w/crsr.
  Disk Usage: 726 reads avg 0 msec, 0% r 0% w last  0 s, 98 writes flush          0 MB,
    21 read ahead, batch = 14.  Autocompact 0 in 0 out, 0% saved.
Gate:  228 2nd in reads, 0 gate write waits, 0 in while read 0 busy scrap. 
Log = /virtuoso_data/db/virtuoso.trx, 185 bytes
1905 pages have been changed since last backup (in checkpoint state)
Current backup timestamp: 0x0000-0x00-0x00
Last backup date: unknown
Clients: 1 connects, max 1 concurrent
RPC: 4 calls, 1 pending, 1 max until now, 0 queued, 0 burst reads (0%), 0 second 0M large, 8M max
Checkpoint Remap 95 pages, 0 mapped back. 0 s atomic time.
    DB master 10240 total 8211 free 95 remap 0 mapped back
   temp  256 total 251 free
 
Lock Status: 0 deadlocks of which 0 2r1w, 0 waits,
   Currently 1 threads running 0 threads waiting 0 threads in vdb.
Pending:
 
Client 1111:1:  Account: dba, 200 bytes in, 286 bytes out, 1 stmts.
PID: 29, OS: unix, Application: unknown, IP#: 127.0.0.1
Transaction status: PENDING, 1 threads.
Locks: 
 
 
Running Statements:
 Time (msec) Text
          18 status()
 
 
Hash indexes
 

37 Rows. -- 19 msec.
SQL_STATE     SQL_MESSAGE
LONG VARCHAR  VARCHAR
_______________________________________________________________________________

00000         GUI is accesible via http://host:port/fct
00000         Post-installation guide is available from http://host:port/fct/post_install.html
00000         No errors detected
00000         Installation of "Faceted Browser" is complete.
00000         Now making a final checkpoint.
00000         Final checkpoint is made.
00000         SUCCESS
BLOB 0 chars  

8 Rows. -- 1612 msec.

Done. -- 108 msec.
REPORT
VARCHAR
_______________________________________________________________________________

OpenLink Virtuoso  Server
Version 07.20.3229-pthreads for Linux as of Nov 26 2019 
Started on: 2019-11-26 10:19 GMT+0
 
Database Status:
  File size 83886080, 10240 pages, 8231 free.
  20000 buffers, 1327 used, 0 dirty 0 wired down, repl age 0 0 w. io 0 w/crsr.
  Disk Usage: 1383 reads avg 0 msec, 0% r 0% w last  1 s, 943 writes flush      18.66 MB,
    95 read ahead, batch = 8.  Autocompact 60 in 58 out, 3% saved.
Gate:  676 2nd in reads, 0 gate write waits, 0 in while read 0 busy scrap. 
Log = /virtuoso_data/db/virtuoso.trx, 185 bytes
1904 pages have been changed since last backup (in checkpoint state)
Current backup timestamp: 0x0000-0x00-0x00
Last backup date: unknown
Clients: 1 connects, max 1 concurrent
RPC: 10 calls, 1 pending, 1 max until now, 0 queued, 0 burst reads (0%), 0 second 0M large, 10M max
Checkpoint Remap 76 pages, 0 mapped back. 0 s atomic time.
    DB master 10240 total 8231 free 76 remap 0 mapped back
   temp  256 total 251 free
 
Lock Status: 0 deadlocks of which 0 2r1w, 0 waits,
   Currently 1 threads running 0 threads waiting 0 threads in vdb.
Pending:
 
Client 1111:1:  Account: dba, 578 bytes in, 4297 bytes out, 1 stmts.
PID: 29, OS: unix, Application: unknown, IP#: 127.0.0.1
Transaction status: PENDING, 1 threads.
Locks: 
 
 
Running Statements:
 Time (msec) Text
           8 status()
 
 
Hash indexes
 

37 Rows. -- 9 msec.

Done. -- 3 msec.

Done. -- 2 msec.

Done. -- 5 msec.

Done. -- 2223 msec.

Done. -- 172 msec.
REPORT
VARCHAR
_______________________________________________________________________________

OpenLink Virtuoso  Server
Version 07.20.3229-pthreads for Linux as of Nov 26 2019 
Started on: 2019-11-26 10:19 GMT+0
 
Database Status:
  File size 83886080, 10240 pages, 8250 free.
  20000 buffers, 1351 used, 0 dirty 0 wired down, repl age 0 0 w. io 0 w/crsr.
  Disk Usage: 1416 reads avg 0 msec, 0% r 0% w last  2 s, 1031 writes flush      19.54 MB,
    97 read ahead, batch = 8.  Autocompact 115 in 91 out, 20% saved.
Gate:  690 2nd in reads, 0 gate write waits, 0 in while read 0 busy scrap. 
Log = /virtuoso_data/db/virtuoso.trx, 185 bytes
1904 pages have been changed since last backup (in checkpoint state)
Current backup timestamp: 0x0000-0x00-0x00
Last backup date: unknown
Clients: 1 connects, max 1 concurrent
RPC: 22 calls, 1 pending, 1 max until now, 0 queued, 0 burst reads (0%), 0 second 0M large, 10M max
Checkpoint Remap 57 pages, 0 mapped back. 0 s atomic time.
    DB master 10240 total 8250 free 57 remap 0 mapped back
   temp  256 total 251 free
 
Lock Status: 0 deadlocks of which 0 2r1w, 0 waits,
   Currently 1 threads running 0 threads waiting 0 threads in vdb.
Pending:
 
Client 1111:1:  Account: dba, 1322 bytes in, 6778 bytes out, 1 stmts.
PID: 29, OS: unix, Application: unknown, IP#: 127.0.0.1
Transaction status: PENDING, 1 threads.
Locks: 
 
 
Running Statements:
 Time (msec) Text
          10 status()
 
 
Hash indexes
 

37 Rows. -- 11 msec.
2019-11-26 10:19:49.958:INFO::main: Logging initialized @188ms to org.eclipse.jetty.util.log.StdErrLog
WARNING: jetty-runner is deprecated.
         See Jetty Documentation for startup options
         https://www.eclipse.org/jetty/documentation/
2019-11-26 10:19:49.965:INFO:oejr.Runner:main: Runner
2019-11-26 10:19:50.063:INFO:oejs.Server:main: jetty-9.4.24.v20191120; built: 2019-11-20T21:37:49.771Z; git: 363d5f2df3a8a28de40604320230664b9c793c16; jvm 1.8.0_212-8u212-b01-1~deb9u1-b01

> tbx2rdf_component@1.0.0 start /tmp/server
> node main.js

2019-11-26 10:19:50.192:INFO:oeju.TypeUtil:main: JVM Runtime does not support Modules
2019-11-26 10:19:50.280:INFO:oejs.session:main: DefaultSessionIdManager workerName=node0
2019-11-26 10:19:50.280:INFO:oejs.session:main: No SessionScavenger set, using defaults
2019-11-26 10:19:50.283:INFO:oejs.session:main: node0 Scavenging every 660000ms
status container initialized
status processing pipeline loaded
Instance listening on port 8080!
2019-11-26 10:19:50.550:INFO:oejsh.ContextHandler:main: Started o.e.j.w.WebAppContext@61baa894{Pubby,/,file:///tmp/server/pubby/webapp/,AVAILABLE}{file:///tmp/server/pubby/webapp/}
2019-11-26 10:19:50.566:INFO:oejs.AbstractConnector:main: Started ServerConnector@7a7b0070{HTTP/1.1,[http/1.1]}{0.0.0.0:9000}
2019-11-26 10:19:50.567:INFO:oejs.Server:main: Started @804ms
SPARQL request: abc
{ query: [32m'abc'[39m,
  result: [1mnull[22m,
  error:
   [ [1mnull[22m,
     IncomingMessage {
       _readableState: [36m[ReadableState][39m,
       readable: [33mfalse[39m,
       _events: [36m[Object][39m,
       _eventsCount: [33m2[39m,
       _maxListeners: [90mundefined[39m,
       socket: [36m[Socket][39m,
       connection: [36m[Socket][39m,
       httpVersionMajor: [33m1[39m,
       httpVersionMinor: [33m1[39m,
       httpVersion: [32m'1.1'[39m,
       complete: [33mtrue[39m,
       headers: [36m[Object][39m,
       rawHeaders: [36m[Array][39m,
       trailers: {},
       rawTrailers: [],
       aborted: [33mfalse[39m,
       upgrade: [33mfalse[39m,
       url: [32m''[39m,
       method: [1mnull[22m,
       statusCode: [33m400[39m,
       statusMessage: [32m'Bad Request'[39m,
       client: [36m[Socket][39m,
       _consuming: [33mfalse[39m,
       _dumped: [33mfalse[39m,
       req: [36m[ClientRequest][39m },
     [32m"Virtuoso 37000 Error SP030: SPARQL compiler, line 1: syntax error at 'abc' before '}'\n\nSPARQL query:\ndefine sql:big-data-const 0 abc"[39m ] }
undefined:1
undefined
^

SyntaxError: Unexpected token u in JSON at position 0
    at JSON.parse (<anonymous>)
    at /tmp/server/main.js:83:34
    at Request.callback (/tmp/server/node_modules/sparql/lib/sparql.coffee:140:45)
    at IncomingMessage.<anonymous> (/tmp/server/node_modules/request/main.js:214:44)
    at IncomingMessage.emit (events.js:198:15)
    at endReadableNT (_stream_readable.js:1139:12)
    at processTicksAndRejections (internal/process/task_queues.js:81:17)
[37;40mnpm[0m [0m[31;40mERR![0m [0m[35mcode[0m ELIFECYCLE
[0m[37;40mnpm[0m [0m[31;40mERR![0m [0m[35merrno[0m 1
[0m[37;40mnpm[0m [0m[31;40mERR![0m[35m[0m tbx2rdf_component@1.0.0 start: `node main.js`
[0m[37;40mnpm[0m [0m[31;40mERR![0m[35m[0m Exit status 1
[0m[37;40mnpm[0m [0m[31;40mERR![0m[35m[0m 
[0m[37;40mnpm[0m [0m[31;40mERR![0m[35m[0m Failed at the tbx2rdf_component@1.0.0 start script.
[0m[37;40mnpm[0m [0m[31;40mERR![0m[35m[0m This is probably not a problem with npm. There is likely additional logging output above.
[0m
[37;40mnpm[0m [0m[31;40mERR![0m[35m[0m A complete log of this run can be found in:
[0m[37;40mnpm[0m [0m[31;40mERR![0m[35m[0m     /root/.npm/_logs/2019-11-26T10_19_52_586Z-debug.log
[0m